--- a/meta-caam-pkc-sec/README
+++ b/meta-caam-pkc-sec/README
@@ -4,7 +4,7 @@ Please see the corresponding sections below for details.
 
 Maintainer: Marouene Boubakri <marouene.boubakri@nxp.com>
 
-To add the meta-ecdsa-blackkey layer to your build
+To add the meta-caam-pkc-sec layer to your build
 
 Run 'bitbake-layers add-layer meta-caam-pkc-sec'
 
